fixed z-index

--- a/client/assets/less/core/general.less
+++ b/client/assets/less/core/general.less
@@ -18,7 +18,7 @@ main {
     position: absolute;
     min-height: 100%;
     overflow: hidden;
-    z-index: 4;
+    z-index: 3;
 
     @media @md-and-up {
       width: auto;
