--- a/client/assets/less/custom/map.less
+++ b/client/assets/less/custom/map.less
@@ -20,6 +20,7 @@
     right: auto;
     left: 8px;
     top: 58px;
+    z-index: 2;
 
     @media @md-and-up {
       right: 12px;
